--- a/Interactivequiz.html
+++ b/Interactivequiz.html
@@ -4,19 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <link rel="stylesheet" href="./Interactivequiz.css">
 </head>
 <body>
-    <div class="Main-container">
+    <div class="Main-container" id="outerBox">
     <p  class="text1">Challenge yourself and see how much you know!</p>
-    <button class="btn1">Start Quiz</button>
+    <button class="btn1" onclick="StartQuiz()">Start Quiz</button>
     </div>
-    <div class="Inner-container">
+    <div class="Inner-container" id="innerBox">
+     <div class="nev-btn" onclick="Homepage()"><button><i class="fa-solid fa-arrow-left"></i></button></div>
+     <p class="text1">Don't rush — choose the best answer.</p>
      <div class="Test-box">
-      <div></div>
-      <button class="S-btn">Submit</button>
+     <div class="Qbox">
+     </div>
+     <button class="S-btn">Submit</button>
      </div>
      <button class="R-btn">Reset</button>
     </div>
+    <script>
+        function StartQuiz(){
+            document.getElementById('innerBox').style.display = 'flex'
+            document.getElementById('outerBox').style.display = 'none'
+        }
+        function Homepage(){
+            document.getElementById('innerBox').style.display = 'none'
+            document.getElementById('outerBox').style.display = 'flex'
+        }
+        fetch('D:\Dev-Bazm\interactive-quiz\Questions.txt')
+        .then(res=>res.json())
+        .then(data=>{
+            data.map
+        })
+    </script>
 </body>
 </html>
