--- a/fetchitem.html
+++ b/fetchitem.html
@@ -5,45 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .outerBox {
+        *{
+            margin: 0%;
+        }
+        body{
+            display: flex;
+            flex-direction: column;
+        }
+        .outerBox{
             display: flex;
             flex-wrap: wrap;
-            gap: 15px;
+            width: 100%;
+            height: 100vh;
         }
-        .st-box {
-            height: 290px;
-            width: 200px;
+        .innerBox {
+            display: flex;
+            flex-wrap: wrap;
+            width: 150px;
+            height: 190px;
+
+        }
+        button{
+            height: 35px;
+            width: 70px;
             background-color: blue;
-            border-radius: 10px;
-            padding: 10px;
-        }
-        .st-box p {
-            font-size: 12px;
             color: white;
-            font-family: 'Times New Roman';
+            border-radius: 15px;
         }
     </style>
 </head>
 <body>
-<div class="outerBox" id="outerBox"></div>
-<script>
-fetch('Studennt.json')
-  .then((res) => res.json())
-  .then((students) => {
-    document.getElementById('outerBox').innerHTML = students
-      .map((stu) => `
-        <div class="st-box">
-            <p>Id: ${stu.id}</p>
-            <p>Name: ${stu.name}</p>
-            <p>Age: ${stu.age}</p>
-            <p>Grade: ${stu.grade}</p>
-            <p>Email: ${stu.email}</p>
-        </div>
-      `)
-      .join("");
-  });
-</script>
-
+     <div class="outerBox" id="outerBox">
+      <div class="innerBox" id="innerBox"></div>
+     </div>
+      <button>Next Student</button>
+      <button>See Again</button>
+    <script>
+      
+    </script>
 </body>
 </html>
-
