--- a/fetchitem.html
+++ b/fetchitem.html
@@ -16,7 +16,7 @@
             display: flex;
             flex-wrap: wrap;
             width: 100%;
-            height: 100vh;
+            height: 450px;
         }
         .innerBox {
             display: flex;
@@ -26,8 +26,8 @@
 
         }
         button{
-            height: 35px;
-            width: 70px;
+            height: 50px;
+            width: 150px;
             background-color: blue;
             color: white;
             border-radius: 15px;
@@ -38,10 +38,45 @@
      <div class="outerBox" id="outerBox">
       <div class="innerBox" id="innerBox"></div>
      </div>
-      <button>Next Student</button>
-      <button>See Again</button>
+      <button onclick="nextStudent()">Next Student</button>
+      <button onclick="ResetData()">See Again</button>
     <script>
-      
+        let Students = []
+        let index = 0 
+        function ShowData(){
+            fetch('Student.json')
+            .then(res=>res.json())
+            .then((data)=>{
+                Students = data
+                ShowStudent()
+            })
+        }
+        function ShowStudent(){
+              if(index >= Students.length){
+                document.getElementById('innerBox').innerHTML =
+                `
+                <h1>All Student Visited</h1>
+                `
+                return
+            }
+            let student = Students[index]
+            document.getElementById('innerBox').innerHTML = 
+            `
+            <p> Name : ${student.id} </p>
+            <p> Name : ${student.name} </p>
+            <p> Name : ${student.email} </p>
+            `
+          
+        }
+        function ResetData(){
+           index = 0
+          ShowStudent()
+        }
+        function nextStudent(){
+            index++
+          ShowStudent()
+        }
+        ShowData()
     </script>
 </body>
 </html>
