--- a/fetchitem.html
+++ b/fetchitem.html
@@ -26,7 +26,7 @@
         background-color: red;
 
       }
-      button {
+      .Timerbox ,button {
         font-size: 15px;
         font-family: "Times New Roman", Times, serif;
         width: 180px;
@@ -34,6 +34,11 @@
         background-color: blue;
         color: white;
         border-radius: 20px;
+        cursor: pointer;
+      }
+      button:hover{
+        background-color: white;
+        color: blue;
       }
     </style>
   </head>
@@ -41,6 +46,8 @@
     <div class="DataBox" id="DataBox"></div>
     <button onclick="Next()">Next</button>
     <button onclick="Reset()">Reset Data</button>
+    <button onclick="">Click to Start</button>
+    <p  id="TimerBox" class="Timerbox"> </p>
     <script>
       let Students = [];
       let index = 0;
@@ -71,6 +78,9 @@
     function Reset(){
         index = 0
         showStudent()
+    }
+    function Start(){
+      set
     }
     Studentdata()
     </script>
